[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = "1.7"
crossbeam = "0.8"
crossbeam-channel = "0.5"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
kanal = { git = "https://github.com/zstewar1/kanal.git", branch = "main" }
kanal-parkinglot = { git = "https://github.com/zstewar1/kanal.git", branch = "parkinglot" }
kanal-stdlock = { git = "https://github.com/zstewar1/kanal.git", branch = "stdlock" }
clap = { version = "4.0.17", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = 'thin'
panic = 'abort'
codegen-units = 1
rpath = false

[[bin]]
name = "cpu-eater"
path = "cpu-eater.rs"
doc = false

[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"
doc = false

[[bin]]
name = "kanal"
path = "kanal.rs"
doc = false

[[bin]]
name = "kanal-async"
path = "kanal-async.rs"
doc = false

[[bin]]
name = "kanal_parkinglot"
path = "kanal_parkinglot.rs"
doc = false

[[bin]]
name = "kanal_parkinglot-async"
path = "kanal_parkinglot-async.rs"
doc = false

[[bin]]
name = "kanal_stdlock"
path = "kanal_stdlock.rs"
doc = false

[[bin]]
name = "kanal_stdlock-async"
path = "kanal_stdlock-async.rs"
doc = false

[[bin]]
name = "flume"
path = "flume.rs"
doc = false

[[bin]]
name = "flume-async"
path = "flume-async.rs"
doc = false

[[bin]]
name = "futures-channel"
path = "futures-channel.rs"
doc = false

[[bin]]
name = "mpsc"
path = "mpsc.rs"
doc = false

[[bin]]
name = "async-channel"
path = "async-channel.rs"
doc = false

